--- a/package.json
+++ b/package.json
@@ -1,17 +1,37 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "dependencies": {
-    "nuxt": "^3.17.3",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
-  }
+    "name": "nuxt-app",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "build": "nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview",
+        "postinstall": "nuxt prepare"
+    },
+    "dependencies": {
+        "@nuxt/image": "^1.10.0",
+        "@nuxtjs/google-fonts": "^3.2.0",
+        "@pinia/nuxt": "^0.11.0",
+        "@vueuse/core": "^13.3.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-vue-next": "^0.511.0",
+        "nuxt": "^3.17.3",
+        "pinia": "^3.0.2",
+        "reka-ui": "^2.3.0",
+        "tailwind-merge": "^3.3.0",
+        "tw-animate-css": "^1.3.0",
+        "vue": "^3.5.13",
+        "vue-router": "^4.5.1"
+    },
+    "devDependencies": {
+        "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
+        "@tailwindcss/vite": "^4.1.7",
+        "shadcn-nuxt": "^2.2.0",
+        "tailwindcss": "^4.1.7"
+    },
+    "overrides": {
+        "vue": "latest"
+    }
 }
